[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/StartMenu.gd" type="Script" id=1]
[ext_resource path="res://images/first.jpg" type="Texture" id=2]
[ext_resource path="res://images/mother.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Sprite.gd" type="Script" id=4]
[ext_resource path="res://Scenes/sheet.tscn" type="PackedScene" id=5]
[ext_resource path="res://Sounds/fort.ogg" type="AudioStream" id=6]
[ext_resource path="res://instance/Platform.tscn" type="PackedScene" id=7]
[ext_resource path="res://instance/Player.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scripts/Player_null.gd" type="Script" id=9]
[ext_resource path="res://images/bro1.png" type="Texture" id=10]

[sub_resource type="AudioStreamRandomPitch" id=1]

resource_local_to_scene = true
audio_stream = ExtResource( 6 )
random_pitch = 1.1
_sections_unfolded = [ "Resource" ]

[sub_resource type="BitmapFont" id=2]

textures = [  ]
chars = PoolIntArray(  )
kernings = PoolIntArray(  )
height = 30.0
ascent = 0.0
distance_field = false

[node name="StartMenu" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="first" type="Sprite" parent="." index="0"]

position = Vector2( 285.77, 387.288 )
scale = Vector2( 0.720238, 0.753261 )
texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = true

[node name="mother" type="Sprite" parent="." index="2"]

position = Vector2( 131.754, 297.825 )
scale = Vector2( 0.720238, 0.720238 )
texture = ExtResource( 3 )
offset = Vector2( 0, -50 )
script = ExtResource( 4 )
_sections_unfolded = [ "Animation", "Offset", "Z Index" ]
res = 0
multi = 1

[node name="sheet_press" parent="." index="3" instance=ExtResource( 5 )]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." index="4"]

stream = SubResource( 1 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = true
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="CenterContainer" type="CenterContainer" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 560.0
margin_bottom = 802.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false
_sections_unfolded = [ "Rect" ]

[node name="Title" type="Label" parent="CenterContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 280.0
margin_top = 398.0
margin_right = 280.0
margin_bottom = 403.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.871094, 0.306244, 0.306244, 1 )
custom_colors/font_color_shadow = Color( 1, 0.175781, 0.175781, 1 )
text = "Fii jump game
"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Theme", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 238.0
margin_top = 377.0
margin_right = 321.0
margin_bottom = 425.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="StartGameButton" type="Button" parent="CenterContainer/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -11.0
margin_top = -8.0
margin_right = 72.0
margin_bottom = 12.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Start Game"
flat = false
align = 1
_sections_unfolded = [ "Focus", "Hint", "Material", "Rect", "Size Flags", "Theme", "Visibility", "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="QuitGameButton" type="Button" parent="CenterContainer/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -7.0
margin_top = 39.0
margin_right = 76.0
margin_bottom = 59.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Quit Game"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 48.0
margin_right = 83.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Platform" parent="." index="6" instance=ExtResource( 7 )]

position = Vector2( 287.866, 982.833 )
scale = Vector2( 9.46803, 1 )

[node name="Player" parent="." index="7" instance=ExtResource( 8 )]

position = Vector2( 128.244, 489.903 )
script = ExtResource( 9 )

[node name="bro" type="Sprite" parent="." index="8"]

position = Vector2( 96.5926, 319.718 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 10 )
offset = Vector2( 0, -50 )
script = ExtResource( 4 )
_sections_unfolded = [ "Animation", "Offset", "Transform", "Z Index" ]
res = 0
multi = -1

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="pressed" from="CenterContainer/VBoxContainer/StartGameButton" to="." method="_on_StartGameButton_pressed"]

[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitGameButton" to="." method="_on_QuitGameButton_pressed"]


